--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 jWT_SECRET=123-XYZ-ABC
 JWT_EXPIRATION_TIME=2h
-# JWT_ISSUER=https://jwt-next-inzmamul-karim.vercel.app
+# JWT_ISSUER=https://nextjs-back-end-securities.vercel.app/
 JWT_ISSUER=http://localhost:3000/
